SpringBoot支持
Spring-data-elasticsearch-boot